# ai-agents-demos

./: .env.example  README.md  main.py  pyproject.toml  utils.py
basic_chat_bot/v1/: README.md  api.py  bot.py
basic_chat_bot/v2/: README.md  bot.py
basic_chat_bot/v3/: README.md  api.py  bot.py
basic_chat_bot/v4/: README.md  bot.py
basic_chat_bot/v5/: README.md  bot.py
customer_support/urgent_booking_changes/: README.md  graph.py  mock_server.py  nodes.py  state.py  test_cases.py
customer_support/urgent_booking_changes/v1/: README.md  graph.py  mock_server.py  nodes.py  notebook.ipynb  test_cases.py
customer_support/urgent_booking_changes/v2/: graph.py  mock_server.py  nodes.py  notebook.ipynb
voice_chat/v1/: README.md  agent.py  answer_phone.py
voice_chat/v2/: README.md  agent.py  bot.py
