[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.3.29",
    "nest-asyncio>=1.6.0",
    "openai>=1.73.0",
    "pydantic>=2.11.3",
    "pyngrok>=7.2.5",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "soundfile>=0.13.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "uvicorn>=0.34.2",
    "whisper>=1.1.10",
]
